# Komga-RPC

./: Cargo.toml  README.md  com.komga.discord-rpc.plist  config.json.example
config/: config.json.example
installer/: Cargo.toml
installer/src/: main.rs
src/: main.rs
