[package]
name = "komga-discord-rpc-installer"
version = "0.1.0"
edition = "2021"
authors = ["Eric Barbosa <eric@erictb.com>"]
description = "Installer for Komga Discord RPC"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
discord-rich-presence = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"